2006-02-13  Karsten Bräckelmann  <guenther@rudersport.de>

	* evolution-calendar.xml: Add mnemonics. Fixes bug #330936.
	Fix uppercase usage to be HIG compliant for tooltips.

2006-02-10  Karsten Bräckelmann  <guenther@rudersport.de>

	* evolution-event-editor.xml: Fix some mnemonics and HIG compliant
	uppercase usage. Fixes bug #327932.

2006-02-05  Andre Klapper <a9016009@gmx.de>

	* evolution-mail-message.xml:
	* evolution-tasks.xml:
	harmonizing plural forms of tooltips and status messages;
	fixing a few bugs (#311474)

2006-02-05  Karsten Bräckelmann  <guenther@rudersport.de>

	* evolution-mail-list.xml: Properly renamed "Mark Messages as
	Read" to read Mark All Messages, fixing bug #325787.

2006-01-30  Rajeev Ramanathan <rajeevramanathan_2004@yahoo.co.in>

	* evolution.xml: Added a menu item for show/hide side bar.
	Also changed the mnemonics for toobar.

2006-01-30  Rajeev Ramanathan <rajeevramanathan_2004@yahoo.co.in>

	** Fixes bug #327304
	
	* evolution-calendar.xml: Added pixbuf for calendar prev/next buttons
	instead of stock icons.

2006-01-18  Rajeev Ramanathan <rajeevramanathan_2004@yahoo.co.in>

	** Fixes bug #328150

	* evolution-memo-editor.xml: Added a new xml file for memos.
	* Makefile.am: Added new file to the build

2006-01-25  Srinivasa Ragavan  <sragavan@novell.com>

	** Fixes bugs #328513, #328514, #328551, #328553, #328558, #328559, #328560
	* evolution-addressbook.xml:
	* evolution-event-editor.xml:
	* evolution-task-editor.xml:
	* evolution.xml:
	
	Added mnemonics for missing menu items, solved few mnemonics clash and
	C+A+S to C+S for save contact in address book.

2005-12-12  Devashish Sharma <sdevashish@novell.com>

	* evolution-addressbook.xml : Added menu items for address book 
	operations.

2006-01-22  Ranjan Somani  <sranjan@novell.com>

	* ui/evolution-mail-message.xml: Removed the extra toolbar separator 
	 Fixes #326387

2006-01-19  Andre Klapper <a9016009@gmx.de>
